--- a/workshopB_2022.Rmd
+++ b/workshopB_2022.Rmd
@@ -26,6 +26,10 @@ Disaster has struck - hard on the heels of the COVID-19 pandemic, another diseas
 
 The cause of the outbreak appears to be Influenza A virus. (Please refer to the [WHO Influenza Fact Sheet](https://www.who.int/news-room/fact-sheets/detail/influenza-(seasonal)) for more information about the pathogen.)
 
+```{r influenza, out.width="50%", out.height="50%", echo=FALSE, fig.cap="False-coloured transmission electron microscopy (TEM) image of an influenza virus particle. Image credit: [CDC](https://phil.cdc.gov/Details.aspx?pid=10073)"}
+knitr::include_graphics(rep("images/influenza.jpg"))
+```
+
 Each member of your group will play one of the following roles as you attempt to tackle the disease outbreak and save your city:
 
 1.	Provost (head of the city council)
@@ -229,6 +233,8 @@ I have just learned that my `r sample(rel1, 1)` has passed away due to the new p
 
 ***
 
+As Provost of `r city_name`, you are of course familiar with the work of the [Standing Committee on Pandemic Preparedness](https://www.gov.scot/groups/standing-committee-on-pandemic-preparedness/), the [UK Pandemic Preparedness plan](https://www.gov.uk/government/publications/uk-pandemic-preparedness/uk-pandemic-preparedness), and the latest [COVID-19 health protection guidance](https://publichealthscotland.scot/our-areas-of-work/conditions-and-diseases/covid-19/covid-19-health-protection-guidance/#section-1) released by Public Health Scotland. 
+
 ***
 
 ## Information Packet B2
@@ -415,6 +421,8 @@ ggplot(hosKPIs, aes(x = KPI, y = percent)) +
 
 There are currently `r sample(143:180, size=1)` patients in the `r hospital_name` with confirmed or suspected influenza, with `r sample(15:17, size=1)` of these patients currently in the ICU. 
 
+The hospital follows the guidelines set out in the [National Infection Prevention and Control Manual](https://www.nipcm.hps.scot.nhs.uk/).
+
 ***
 
 ## Information Packet B5
@@ -487,8 +495,8 @@ You are a microbiologist working in the virology department at the Greater `r ci
 
 You are familiar with the culture requirements for growth of influenza viruses in tissue culture, and the range of [influenza virus testing methods](https://www.cdc.gov/flu/professionals/diagnosis/table-testing-methods.htm).
 
-```{r influenza, echo=FALSE, fig.cap="False-coloured transmission electron microscopy (TEM) image of an influenza virus particle. Image credit: [CDC](https://phil.cdc.gov/Details.aspx?pid=10073)"}
-knitr::include_graphics(rep("images/influenza.jpg"))
+```{r influenza-assay, out.width="30%", out.height="30%", echo=FALSE, fig.cap="A plaque assay for influenza virus. Image credit: [CDC](https://phil.cdc.gov/Details.aspx?pid=23215)"}
+knitr::include_graphics(rep("images/influenza-plaqueassay.jpg"))
 ```
 
 Morehouse, Zachary P et al. “A narrative review of nine commercial point of care influenza tests: an overview of methods, benefits, and drawbacks to rapid influenza diagnostic testing.” Journal of osteopathic medicine vol. 123,1 39-47. 19 Aug. 2022.
