--- a/workshop1_template.Rmd
+++ b/workshop1_template.Rmd
@@ -416,6 +416,16 @@ ggplot(hosKPIs, aes(x = KPI, y = percent)) +
 
 There are currently `r sample(143:180, size=1)` patients in the `r hospital_name` with confirmed or suspected DIS-NAME, with `r sample(15:17, size=1)` of these patients currently in the ICU. 
 
+The hospital follows the guidelines set out in the [National Infection Prevention and Control Manual](https://www.nipcm.hps.scot.nhs.uk/).
+
+As a hospital director, you are familiar with the literature surrounding hospital pandemic preparedness, and regularly read papers such as:
+
+Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
+
+Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
+
+Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
+
 ***
 
 ## Information Packet X5
@@ -494,7 +504,19 @@ knitr::include_graphics(rep("images/DIS-NAME.jpg"))
 
 ## Information Packet X7
 
-You are a public communications expert, often employed by the `r city_name` city council to manage the PR response to different initiatives or crises. You have assembled the following information/resources for this meeting:
+You are a public communications expert, often employed by the `r city_name` city council to manage the PR response to different initiatives or crises. 
+
+As a public communications expert, you are familiar with the literature surrounding science communication in a pandemic, including papers such as: 
+
+Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
+
+Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
+
+Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
+
+Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
+
+You have assembled the following information/resources for this meeting:
 
 3x citations or links
 
