--- a/workshopD_2022.Rmd
+++ b/workshopD_2022.Rmd
@@ -40,6 +40,7 @@ Each member of your group will play one of the following roles as you attempt to
 6.	Microbiologist (working in one of the NHS Scotland clinical labs)
 7.	Public communications expert (past and current sci comm campaigns)
 8.  Doctor at a major surgery in `r city_name`
+9.  Epidemiologist from the local university, an expert on <i>Campylobacter</i> transmission
 
 You must work together, using the information that has been provided for you in the attached information packets, and decide what action(s) should be taken to control the measles outbreak currently plaguing your city, `r city_name`. Your actions should be evidence-based – use the peer-reviewed literature to decide on measures that will stop the pandemic in your scenario.
 
@@ -85,11 +86,11 @@ ggplot(data = birthdeath, aes(x=DemogYears, y=Num, group=Demog, colour=Demog)) +
   theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
   scale_color_discrete(name="")
 ```
-You were elected as a member of the popular "PARTY3" party and made a number of election promises regarding a "Green New Deal" for `r city_name`.
+You were elected as a member of the popular "Peace and Prosperity" party and made a number of election promises regarding a "Green New Deal" for `r city_name`.
 
 ```{r A2, fig.cap="Voting intention by Rosblane residents (Source: YouGov polling)", echo=FALSE}
 
-Party <- c((rep("PARTY1", 10)), (rep("PARTY2", 10)), (rep("PARTY3", 10)), (rep("PARTY4", 10)), (rep("PARTY5", 10)))
+Party <- c((rep("New Hope", 10)), (rep("Wind and Solar Power", 10)), (rep("Peace and Prosperity", 10)), (rep("Rational Industry", 10)), (rep("Social Unity", 10)))
 Polls <- c(sample(1:3, size=10, replace=TRUE), sample(8:14, size=10, replace=TRUE), sample(15:20, size=10, replace=TRUE), sample(5:10, size=10, replace=TRUE), sample(1:2, size=10, replace=TRUE))
 PolYears <- c(rep(2012:2021, 5))
 politics <- data.frame(Party, Polls, PolYears)
@@ -107,7 +108,7 @@ There are currently `r Councillors` elected councillors, representing the 5 main
 ```{r A3, echo=FALSE}
 
 pol2021 <- (politics[politics$PolYears>2020, 2])
-Parties <- c("PARTY1", "PARTY2", "PARTY3", "PARTY4", "PARTY5")
+Parties <- c("New Hope", "Wind and Solar Power", "Peace and Prosperity", "Rational Industry", "Social Unity")
 
 Councillors <- data.frame(Parties, pol2021)
 
@@ -243,11 +244,13 @@ You are a representative from Public Health Scotland, sent to `r city_name` to h
 
 Your briefing packet includes the following documents: 
 
-[name](link) or paper citation - x4 total
+[Campylobacter guidance, data and surveillance (PHS)](https://www.hps.scot.nhs.uk/a-to-z-of-topics/campylobacter/)
 
+[Campylobacter Food Poisoning (Food Standards Scotland)](https://www.foodstandards.gov.scot/consumers/food-safety/foodborne-illness/campylobacter)
 
+[Campylobacter: Estimating the burden of gastrointestinal infection in Scotland using data linkage](https://www.foodstandards.gov.scot/downloads/HPS_-_Campylobacter_Data_Linkage_Report.pdf)
 
-
+Bessell, Paul R et al. “Geographic determinants of reported human Campylobacter infections in Scotland.” BMC public health vol. 10 423. 15 Jul. 2010, doi:10.1186/1471-2458-10-423
 
 ***
 
@@ -255,7 +258,7 @@ Your briefing packet includes the following documents:
 
 You are an epidemiologist working for Public Health Scotland, sent to `r city_name` to help with the measles outbreak.
 
-REPLACE THIS TEXT and TABLE - A team of scientists working together have in a PHS lab have isolated and cultured <i>Campylobacter jejuni</i> virus (using a standard tissue culture model) from a number of patient samples taken during this outbreak; isolated <i>Campylobacter jejuni</i> RNA from these cultures; reverse-transcribed this to DNA and sequenced this DNA using an Illumina MiSeq platform; assembled the short paired-end reads; and compared these assemblies to the extant <i>Campylobacter jejuni</i> sequences available in the NCBI databases. The results of these experiments are summarised in the table below. 
+A team of scientists working together have in a PHS lab have isolated and cultured <i>Campylobacter jejuni</i> (following standard procedures) from a number of patient samples taken during this outbreak; isolated <i>Campylobacter jejuni</i> DNA from these cultures; sequenced this DNA using an Illumina MiSeq platform; assembled the short paired-end reads; and compared these assemblies to the extant <i>Campylobacter jejuni</i> sequences available in the NCBI databases. The results of these experiments are summarised in the table below. 
 
 <table>
 <table border="1">
@@ -265,50 +268,52 @@ REPLACE THIS TEXT and TABLE - A team of scientists working together have in a PH
   </tr>
   <tr>
     <td>1</td>
-    <td>acc.no.here</td>
+    <td>GCA_001686905.1</td>
   </tr>
   <tr>
     <td>2</td>
-    <td>acc.no.here</td>
+    <td>GCA_001299565.1</td>
   </tr>
   <tr>
     <td>3</td>
-    <td>acc.no.here</td>
+    <td>GCA_001686905.1</td>
   </tr>
   <tr>
     <td>4</td>
-    <td>acc.no.here</td>
+    <td>GCA_001686905.1</td>
   </tr>
   <tr>
     <td>5</td>
-    <td>acc.no.here</td>
+    <td>GCA_000835285.1</td>
   </tr>
   <tr>
     <td>6</td>
-    <td>acc.no.here</td>
+    <td>GCA_000835285.1</td>
   </tr>
     <tr>
     <td>7</td>
-    <td>acc.no.here</td>
+    <td>GCA_000835285.1</td>
   </tr>
   <tr>
     <td>8</td>
-    <td>acc.no.here</td>
+    <td>GCA_000835285.1</td>
   </tr>
   <tr>
     <td>9</td>
-    <td>acc.no.here</td>
+    <td>GCA_000835285.1</td>
   </tr>
     <tr>
     <td>10</td>
-    <td>acc.no.here</td>
+    <td>GCA_000835285.1</td>
   </tr>
 </table>  
 <br><br>
 Your briefing packet also includes the following documents: 
 
+[<i>Campylobacter jejuni/coli</i> pubMLST](https://pubmlst.org/organisms/campylobacter-jejunicoli)
 
-[text](link) x1, citation x1
+Bessell, Paul R et al. “Using sequence data to identify alternative routes and risk of infection: a case-study of campylobacter in Scotland.” BMC infectious diseases vol. 12 80. 1 Apr. 2012, doi:10.1186/1471-2334-12-80
+
 
 ***
 
@@ -416,6 +421,16 @@ ggplot(hosKPIs, aes(x = KPI, y = percent)) +
 
 There are currently `r sample(143:180, size=1)` patients in the `r hospital_name` with confirmed or suspected <i>Campylobacter jejuni</i>, with `r sample(15:17, size=1)` of these patients currently in the ICU. 
 
+The hospital follows the guidelines set out in the [National Infection Prevention and Control Manual](https://www.nipcm.hps.scot.nhs.uk/).
+
+As a hospital director, you are familiar with the literature surrounding hospital pandemic preparedness, and regularly read papers such as:
+
+Mer, Mervyn et al. “Critical Care Pandemic Preparation: Considerations and Lessons Learned from COVID-19.” Critical care clinics vol. 38,4 (2022): 761-774. 
+
+Tacconelli, Evelina et al. “Challenges of data sharing in European Covid-19 projects: A learning opportunity for advancing pandemic preparedness and response.” The Lancet regional health. Europe vol. 21 (2022): 100467. 
+
+Adelaja, I., Sayma, M., Walton, H., McLachlan, G., de Boisanger, J., Bartlett-Pestell, S., Roche, E., Gandhi, V., Wilson, G. J., Brookes, Z., Yeen Fung, C., Macfarlane, H., Navaratnam, A., James, C., Scolding, P., & Sara, H. (2020). A comprehensive hospital agile preparedness (CHAPs) tool for pandemic preparedness, based on the COVID-19 experience. Future healthcare journal, 7(2), 165–168. 
+
 ***
 
 ## Information Packet D5
@@ -432,7 +447,7 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
   </tr>
   <tr>
     <td>Schools</td>
-    <td>`r sample(2:8, size=1)` primary schools, `r sample(2:5, size=1)` secondary schools, 1 college</td>
+    <td>`r sample(2:8, size=1)` primary schools, `r sample(2:5, size=1)` secondary schools, 1 university</td>
   </tr>
   <tr>
     <td>Care Homes</td>
@@ -472,9 +487,15 @@ Some of the key `r city_name` facts and figures at a glance are summarized in th
 
 Your briefing packet on <i>Campylobacter jejuni</i> includes the following information.
 
-[text](link) x4
+[Campylobacter information and guidance (Food standards Scotland)](https://www.foodstandards.gov.scot/downloads/Factsheet_-_Campylobacter_-_Website_-_for_businesses_and_professionals_-_June_2017.pdf)
 
+[Campylobacter "Fit for Travel" advice](https://www.fitfortravel.nhs.uk/advice/disease-prevention-advice/campylobacter)
 
+MacRitchie, L A et al. “Consumer acceptability of interventions to reduce Campylobacter in the poultry food chain.” Food control vol. 35,1 (2014): 260-266. doi:10.1016/j.foodcont.2013.06.005
+
+Bessell, Paul R et al. “Geographic determinants of reported human Campylobacter infections in Scotland.” BMC public health vol. 10 423. 15 Jul. 2010, doi:10.1186/1471-2458-10-423
+
+Scott, Elizabeth. “Food safety and foodborne disease in 21st century homes.” The Canadian journal of infectious diseases = Journal canadien des maladies infectieuses vol. 14,5 (2003): 277-80.
 
 ***
 
@@ -482,21 +503,43 @@ Your briefing packet on <i>Campylobacter jejuni</i> includes the following infor
 
 You are a microbiologist working in the microbiology department at the Greater `r city_name` Clinical Laboratory. Your laboratory is equipped to handle a range of culture samples (including anaerobic and microaerobic bacteria, as well as viruses), and you routinely process`r sample(1500:2000, size=1)` samples monthly. 
 
-You are familiar with the culture requirements for growth of <i>Campylobacter</i>, and the range of [UK Standards for Microbiology Investigations (UK SMI) for Identification of Campylobacter species](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/685065/ID_23i3.1.pdf).
+You are familiar with the culture requirements for growth of <i>Campylobacter</i>, and the [UK Standards for Microbiology Investigations (UK SMI) for Identification of Campylobacter species](https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/685065/ID_23i3.1.pdf).
 
 ```{r Campylobacter-agar, echo=FALSE, fig.cap="Campylobacter jejuni grown on Skirrow and Butzler growth medium. Image credit: [CDC](https://phil.cdc.gov/Details.aspx?pid=15986)"}
 knitr::include_graphics(rep("images/Campy-plates.jpg"))
 ```
 
-3x citations or links
+LaGier, Michael J et al. “A real-time multiplexed PCR assay for rapid detection and differentiation of Campylobacter jejuni and Campylobacter coli.” Molecular and cellular probes vol. 18,4 (2004): 275-82.
+
+Ferrari, Sevinc et al. “Validation of PCR methods for confirmation and species identification of thermotolerant Campylobacter as part of EN ISO 10272 - Microbiology of the food chain - Horizontal method for detection and enumeration of Campylobacter spp.” International journal of food microbiology vol. 388 (2023): 110064.
+
+Ojima-Kato, Teruyo et al. “Proteotyping of Campylobacter jejuni by MALDI-TOF MS and Strain Solution Version 2 Software.” Microorganisms vol. 11,1 202. 12 Jan. 2023, doi:10.3390/microorganisms11010202
+
+Hong, Seung-Hwan et al. “Gold Nanoparticle and Polymerase Chain Reaction (PCR)-Based Colorimetric Assay for the Identification of Campylobacter spp. in Chicken Carcass.” Food science of animal resources vol. 43,1 (2023): 73-84. doi:10.5851/kosfa.2022.e59
 
 ***
 
 ## Information Packet D7
 
-You are a public communications expert, often employed by the `r city_name` city council to manage the PR response to different initiatives or crises. You have assembled the following information/resources for this meeting:
+You are a public communications expert, often employed by the `r city_name` city council to manage the PR response to different initiatives or crises. 
 
-3x citations or links
+As a public communications expert, you are familiar with the literature surrounding science communication in a pandemic, including papers such as: 
+
+Matta, G. Science communication as a preventative tool in the COVID19 pandemic. Humanit Soc Sci Commun 7, 159 (2020).
+
+Abdool Karim, Salim S. “Public understanding of science: Communicating in the midst of a pandemic.” Public understanding of science (Bristol, England) vol. 31,3 (2022): 282-287.
+
+Royan, Regina et al. “Use of Twitter Amplifiers by Medical Professionals to Combat Misinformation During the COVID-19 Pandemic.” Journal of medical Internet research vol. 24,7 e38324. 22 Jul. 2022, doi:10.2196/38324
+
+Tait, Margaret E et al. “Serving the public? A content analysis of COVID-19 public service announcements airing from March - December of 2020 in the U.S.” Preventive medicine reports vol. 29 (2022): 101971. 
+
+You have assembled the following information/resources for this meeting:
+
+[World Food Safety Day Campaign Materials](https://www.who.int/campaigns/world-food-safety-day/2022/campaign-materials)
+
+[Campylobacter campaign partner toolkit](https://www.foodstandards.gov.scot/publications-and-research/publications/campylobacter-campaign-partner-toolkit)
+
+Gölz, Greta et al. “Relevance of Campylobacter to public health--the need for a One Health approach.” International journal of medical microbiology : IJMM vol. 304,7 (2014): 817-23.
 
 ***
 
@@ -504,8 +547,34 @@ You are a public communications expert, often employed by the `r city_name` city
 
 You are one of the doctors at the largest surgery in `r city_name`. In the past fortnight, `r sample(50:100, size=1)` of your patients have recently presented to the surgery with symptoms consistent with <i>Campylobacter jejuni</i>. You have therefore recently been familiarising yourself with the relevant literature:
 
-[text](link) x4
+[Campylobacter Information for Health Professionals (CDC)](https://www.cdc.gov/campylobacter/technical.html)
 
-citations x3
+[BMJ Best Practice - Campylobacter Infection](https://bestpractice.bmj.com/topics/en-gb/1175)
 
+[NICE Gastroenteritis Background Information](https://cks.nice.org.uk/topics/gastroenteritis/background-information/causes/)
 
+[NICE Gastroenteritis: Management](https://cks.nice.org.uk/topics/gastroenteritis/management/)
+
+Tang, Yizhi et al. “Antibiotic resistance trends and mechanisms in the foodborne pathogen, Campylobacter.” Animal health research reviews vol. 18,2 (2017): 87-98.
+
+Valenčak-Ignjatić, Ivana et al. “Campylobacter jejuni subdural hygroma infection in a 2-year old boy: case report and a brief literature review.” BMC infectious diseases vol. 22,1 700. 20 Aug. 2022, doi:10.1186/s12879-022-07680-0
+
+Lévesque, Simon et al. “Campylobacteriosis in urban versus rural areas: a case-case study integrated with molecular typing to validate risk factors and to attribute sources of infection.” PloS one vol. 8,12 e83731. 26 Dec. 2013, doi:10.1371/journal.pone.0083731
+
+***
+
+## Information Packet D9
+
+You are an epidemiologist working at the University of `r city_name`, and have been studying <i>Campylobacter</i> transmission dynamics for the past `r sample(2:10, size=1)` years. As such, you are very familiar with the relevant literature, including papers such as: 
+
+Bishop, H et al. “Bacteriological Survey of Fresh Minced Beef on Sale at Retail Outlets in Scotland in 2019: Three Foodborne Pathogens, Hygiene Process Indicators, and Phenotypic Antimicrobial Resistance.” Journal of food protection vol. 85,9 (2022): 1370-1379. 
+
+Lopes, Bruno S et al. “Nationwide Stepwise Emergence and Evolution of Multidrug-Resistant Campylobacter jejuni Sequence Type 5136, United Kingdom.” Emerging infectious diseases vol. 25,7 (2019): 1320-1329. 
+
+Sheppard, Samuel K et al. “Evolution of an agriculture-associated disease causing Campylobacter coli clade: evidence from national surveillance data in Scotland.” PloS one vol. 5,12 e15708. 15 Dec. 2010, doi:10.1371/journal.pone.0015708
+
+Sheppard, Samuel K et al. “Campylobacter genotypes from food animals, environmental sources and clinical disease in Scotland 2005/6.” International journal of food microbiology vol. 134,1-2 (2009): 96-103.
+
+Dessouky, Yara El et al. “Genomic insights into zoonotic transmission and antimicrobial resistance in Campylobacter jejuni from farm to fork: a one health perspective.” Gut pathogens vol. 14,1 44. 5 Dec. 2022, doi:10.1186/s13099-022-00517-w
+
+Hadiyan, Maryam et al. “Prevalence, antimicrobial resistance, virulence gene profile and molecular typing of Campylobacter species isolated from poultry meat samples.” Veterinary medicine and science vol. 8,6 (2022): 2482-2493. 
